--- a/domain.yml
+++ b/domain.yml
@@ -8,7 +8,17 @@ intents:
 - deny
 - goodbye
 - greet
-- i
+- request_doc_register
+- request_to_register
+- request_historic
+- request_email
+- request_matricula
+- inform_professor_name
+- request_classes
+- request_calendar
+- request_courses
+- request_documentation
+
 - inform_name:
     ignore_entities:
     - LOC
@@ -24,6 +34,10 @@ entities:
 - PER
 - LOC
 - register
+- classes
+- calendar
+- courses
+- documentation
 slots:
   name:
     type: text
@@ -33,6 +47,13 @@ slots:
       intent: inform_name
       not_intent: inform_professor_name
       entity: PER
+      conditions:
+      - active_loop: name_form
+  matricula:
+    type: text
+    mappings: 
+    - type: from_entity
+      entity: matricula
       conditions:
       - active_loop: name_form
   professor_name:
@@ -45,10 +66,44 @@ slots:
       entity: PER
       conditions:
       - active_loop: professor_name_form
+
+classes:
+  type: text
+  mappings:
+    - type: from_entity
+      entity: classes
+      conditions:
+        - active_loop: classes_form
+
+calendar:
+  type: text
+  mappings:
+    - type: from_entity
+      entity: calendar
+      conditions:
+        - active_loop: calendar_form
+
+courses:
+  type: text
+  mappings:
+    - type: from_entity
+      entity: courses
+      conditions:
+        - active_loop: courses_form
+
+docuemntation:
+  type: text
+  mappings:
+    - type: from_entity
+      entity: documentation
+      conditions:
+        - active_loop: documentation_form
+
 forms:
   name_form:
     required_slots:
     - name
+    - matricula
   professor_name_form:
     required_slots:
     - professor_name
@@ -74,9 +129,27 @@ responses:
   utter_ask_professor:
   - text: Qual o nome do professor?
   - text: Me informa o nome do professor?
+  utter_ask_classes:
+  - text: Os horários de suas aulas e disciplinas você pode conferir aqui {link_classes}!
+  utter_ask_calendar:
+  - text: Confira aqui seu calendário acadêmico {link_calender}!
+  utter_ask_courses:
+  - text: Os cursos disponíveis no IFRS campus Rio Grande pode ser visualizados aqui {link_cursos}!
+  utter_ask_documentation:
+  - text: Os documentos que você deve apresentar no IFRS campus Rio Grande e manter atualizados são.....!
+
 actions:
 - action_buscar_professor
 - action_faq_comprovate
 - utter_ask_help
 - utter_goodbye
 - utter_greet
+- utter_ask_matricula
+- utter_ask_classes
+- utter_ask_calendar
+- utter_ask_courses
+- utter_ask_documentation
+- action_buscar_classes
+- action_buscar_calendar
+- action_buscar_cursos
+- action_buscar_documentos
