--- a/data/stories.yml
+++ b/data/stories.yml
@@ -37,52 +37,61 @@ stories:
       - action: action_buscar_professor
       - action: utter_ask_help
 
-  # - story: solicitar iformações horarios das aulas
-  #   steps:
-  #     - checkpoint: check_ask_help
-  #     - intent: request_classes
-  #     - action: utter_ask_classes
+  - story: solicitar iformações horarios das aulas
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_classes
+      - action: action_buscar_classes
+      - action: utter_ask_help
 
-  # - story: solicitar calendário acadêmico
-  #   steps:
-  #     - checkpoint: check_ask_help
-  #     - intent: request_calendar
-  #     - action: utter_ask_calendar
-  #     - action: calendar_form
-  #     - active_loop: calendar_form
-  #     - slot_was_set:
-  #         - calendar_form: calendario
-  #     - slot_was_set:
-  #         - requested_slot: null
-  #     - active_loop: null
-  #     - action: action_buscar_calendar
-  #     - action: utter_ask_help
+  - story: solicitar calendário acadêmico
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_calendar
+      # - action: utter_ask_calendar
+      # - action: calendar_form
+      # - active_loop: calendar_form
+      # - slot_was_set:
+      #     - calendar_form: calendario
+      # - slot_was_set:
+      #     - requested_slot: null
+      # - active_loop: null
+      - action: action_buscar_calendar
+      - action: utter_ask_help
 
   - story: solicitar cursos
     steps:
       - checkpoint: check_ask_help
-      - intent: request_cursos
-      # - action: utter_ask_cursos
-      # - action: cursos_form
-      # - active_loop: cursos_form
+      - intent: request_courses
+      # - action: utter_ask_courses
+      # - action: courses_form
+      # - active_loop: courses_form
       # - slot_was_set:
-      #     - cursos_form: automacao
+      #     - courses_form: automacao
       # - slot_was_set:
       #     - requested_slot: null
       # - active_loop: null
-      - action: action_buscar_cursos
+      - action: action_buscar_courses
       - action: utter_ask_help
 
-  # - story: solicitar documentos
-  #   steps:
-  #     - checkpoint: check_ask_help
-  #     - intent: request_documentation
-  #     - action: utter_ask_documentation
-  #     - action: documents_form
-  #     - active_loop: documents_form
-  #     - slot_was_set:
-  #         - documents_form: CPF
-  #     - slot_was_set:
-  #         - requested_slot: null
-  #     - active_loop: null
-  #     - action: action_buscar_documentos
+  - story: solicitar documentos
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_documents
+      # - action: action_buscar_documents
+      # - action: documents_form
+      # - active_loop: documents_form
+      # - slot_was_set:
+      #     - documents_form: CPF
+      # - slot_was_set:
+      #     - requested_slot: null
+      # - active_loop: null
+      - action: action_buscar_documents
+      - action: utter_ask_help
+
+  - story: solicitar iformações sobre estagios
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_internship
+      - action: action_buscar_internship
+      - action: utter_ask_help
