--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -108,7 +108,7 @@ nlu:
     - contato dos professores
     - email dos professores do curso [sistemas da informação]
 
-- intent: request_matricula
+- intent: inform_matricula
   examples: |
     - Meu número de matricula é [a10101010](matricula)
     - Minha matricula é [a10101010](matricula)
