add: what bot can do?

--- a/credentials.yml
+++ b/credentials.yml
@@ -22,10 +22,10 @@ rest:
 #  bot_message_evt: <event name for bot messages>
 #  session_persistence: <true/false>
 
-telegram:
-  access_token: ${TELEGRAM_TOKEN}
-  verify: ${TELEGRAM_BOT_USERNAME}
-  webhook_url:  ${TELEGRAM_WEBHOOK}
+# telegram:
+#   access_token: ${TELEGRAM_TOKEN}
+#   verify: ${TELEGRAM_BOT_USERNAME}
+#   webhook_url:  ${TELEGRAM_WEBHOOK}
 
 #mattermost:
 #  url: "https://<mattermost instance>/api/v4"
