--- a/data/stories.yml
+++ b/data/stories.yml
@@ -20,6 +20,7 @@ stories:
       - checkpoint: check_ask_help
       - intent: request_doc_register
       - action: action_faq_comprovate
+      - action: utter_ask_help
 
   - story: solicitar contato de professores
     steps:
@@ -78,14 +79,6 @@ stories:
     steps:
       - checkpoint: check_ask_help
       - intent: request_documents
-      # - action: action_buscar_documents
-      # - action: documents_form
-      # - active_loop: documents_form
-      # - slot_was_set:
-      #     - documents_form: CPF
-      # - slot_was_set:
-      #     - requested_slot: null
-      # - active_loop: null
       - action: action_buscar_documents
       - action: utter_ask_help
 
