--- a/data/rules.yml
+++ b/data/rules.yml
@@ -4,7 +4,7 @@ rules:
   - rule: Say goodbye anytime the user says goodbye
     steps:
       - intent: goodbye
-      - action: utter_goodbye
+      - action: action_goodbye_and_clear_slots
 
   - rule: Say 'I am a bot' anytime the user challenges
     steps:
