--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,24 @@ services:
       - 5055:5055
     volumes:
       - ./actions:/app/actions
+
+  # to tracker history of conversation
+  mongo:
+    image: mongo
+    container_name: db
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: rasa
+  mongo-express:
+    image: mongo-express
+    depends_on:
+      - mongo
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
